--- a/src/Home/less/edit.less
+++ b/src/Home/less/edit.less
@@ -1,13 +1,52 @@
+.header0 {
+  background: rgba(232, 231, 231, 0.95);
+  -webkit-box-shadow: 0 5px 8px rgba(140, 140, 140, 0.2);
+  -moz-box-shadow: 0 5px 8px rgba(140, 140, 140, 0.2);
+  box-shadow: 0 5px 8px rgba(140, 140, 140, 0.2);
+}
+.footer0-wrapper {
+  background: rgba(232, 231, 231, 0.95);
+}
+.footer0-wrapper .footer0 {
+  color: #656565;
+}
+.header0-logo img {
+  opacity: 0.8;
+}
 .banner3 > .banner3-text-wrapper > .jwbvhicx5l-editor_css {
   font-size: 66px;
   font-weight: 200;
   color: rgb(64, 64, 64);
+  line-height: 1;
+}
+.ant-menu.ant-menu-dark .ant-menu-item-selected, .ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
+  background-color: transparent;
+}
+.ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected {
+  border-bottom-color: transparent;
+}
+.content0-wrapper .content0 {
+  padding: 90px 24px;
+}
+@media screen and (max-width: 767px){
+  .banner3 .banner3-name-en {
+    margin-top: -70px;
+  }
+  .header0-mobile-menu em {
+    background: #404040;
+  }
+  .header0 .ant-menu .ant-menu-item-selected a {
+    color: #404040;
+  }
+  .home-page-wrapper .home-page {
+    padding: 60px 24px 0px 24px;
+  }
 }
 .header0-menu > .ant-menu > .jwbw4h84rod-editor_css {
-  color: #3f51b5;
+  color: #404040;
 }
 .header0-menu > .ant-menu > .jwbw4h84rod-editor_css:hover {
-  color: #3f51b5;
+  color: #919191;
 }
 .header0 > .home-page > .jwbvs2s6dne-editor_css {
   width: 60px;
@@ -32,19 +71,19 @@
   color: #404040;
 }
 .header0-menu > .ant-menu > .jwbvv6yhhvl-editor_css:hover {
-  color: #404040;
+  color: #919191;
 }
 .templates-wrapper > .header0 > .jwbvscexzx-editor_css {
   color: #404040;
 }
 .templates-wrapper > .header0 > .jwbvscexzx-editor_css:hover {
-  color: #404040;
+  color: #919191;
 }
 .templates-wrapper > .header0 > .jwbvscexzx-editor_css:active {
-  color: #404040;
+  color: #919191;
 }
 .templates-wrapper > .header0 > .jwbvscexzx-editor_css:focus {
-  color: #404040;
+  color: #919191;
 }
 div > .templates-wrapper > .jwbvs6t6bq-editor_css {
   color: #404040;
@@ -100,15 +139,22 @@ div > .templates-wrapper > .jwbvs6t6bq-editor_css:focus {
   letter-spacing: 2px;
   text-decoration: none;
   position: relative;
-  top: -40px;
+  top: -20px;
   margin: 0px 0px;
   padding: 20px 0px 0px;
 }
 .banner3 > .banner3-text-wrapper > .jwbvker8eo-editor_css {
-  top: -60px;
+  top: -40px;
   background-color: rgb(64, 64, 64);
-  background-image: linear-gradient(to right, #404040 0%, #000000 100%);
+  background-image: linear-gradient(to bottom right, #7b7b7b 0%, #000000 100%);
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.35);
+}
+.banner3 > .banner3-text-wrapper > .jwbvker8eo-editor_css:hover {
+  top: -40px;
+  background-color: rgb(64, 64, 64);
+  background-image: linear-gradient(to bottom right, #7b7b7b 0%, #1f1e1e 100%);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.35);
+  transition: all 5s;
 }
 div > .templates-wrapper > .jwbvg9mw5gi-editor_css {
   background-image: url(https://hyperf.oss-cn-hangzhou.aliyuncs.com/bg.png);
@@ -127,9 +173,15 @@ div > .templates-wrapper > .jwq3bq34q9r-editor_css {
 div > .templates-wrapper > .jwq3fv7xmf-editor_css {
 }
 .templates-wrapper > .home-page-wrapper > .jwq3bo8n6w-editor_css {
-  top: -60px;
+  top: -1rem;
 }
 div > .templates-wrapper > .jwq3fnvddaf-editor_css {
-  height: 10px;
+  height: auto;
   min-height: 700px;
+}
+.banner3 .banner3-button {
+  margin: 100px auto 0;
+}
+.home-page-wrapper .title-wrapper {
+  margin: 0 auto 53px;
 }
