--- a/src/Home/less/nav0.less
+++ b/src/Home/less/nav0.less
@@ -94,7 +94,7 @@
       height: auto;
       overflow: hidden;
 
-      background: @template-bg-color;
+      background: #e9e9e9;
       .ant-menu-item-selected {
         border: none;
       }
