--- a/src/Home/less/custom.less
+++ b/src/Home/less/custom.less
@@ -27,7 +27,7 @@
   border-radius: 6px;
   border: 1px solid @line-color;
   transform: translateY(0);
-  transition: transform .3s @ease-out, box-shadow .3s @ease-out;
+  transition: transform .3s @ease-out, box-shadow 1s @ease-out;
   &:hover {
     .page-shadow();
     transform: translateY(-5px);
