--- a/src/Home/less/edit.less
+++ b/src/Home/less/edit.less
@@ -88,7 +88,8 @@
 div > .templates-wrapper > .jwbvs6t6bq-editor_css {
   color: #404040;
   background-color: rgb(217, 217, 217);
-  background-image: url(http://eskipaper.com/images/white-clouds-background-2.jpg);
+  background-image: url(https://hyperf.oss-cn-hangzhou.aliyuncs.com/bg.png);
+  background-size: cover;
 }
 div > .templates-wrapper > .jwbvs6t6bq-editor_css:hover {
   color: #404040;
@@ -158,10 +159,12 @@ div > .templates-wrapper > .jwbvs6t6bq-editor_css:focus {
 }
 div > .templates-wrapper > .jwbvg9mw5gi-editor_css {
   background-image: url(https://hyperf.oss-cn-hangzhou.aliyuncs.com/bg.png);
+  background-size: cover;
 }
 div > .templates-wrapper > .jwbweljfrfi-editor_css {
   color: rgb(64, 64, 64);
   background-image: url(https://hyperf.oss-cn-hangzhou.aliyuncs.com/bg.png);
+  background-size: cover;
 }
 div > .templates-wrapper > .jwbweljfrfi-editor_css:focus {
   color: rgba(0, 0, 0, 0);
@@ -169,6 +172,7 @@ div > .templates-wrapper > .jwbweljfrfi-editor_css:focus {
 }
 div > .templates-wrapper > .jwq3bq34q9r-editor_css {
   background-image: url(https://hyperf.oss-cn-hangzhou.aliyuncs.com/bg.png);
+  background-size: cover;
 }
 div > .templates-wrapper > .jwq3fv7xmf-editor_css {
 }
